# ChangeLog for app-office/gnucash
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/gnucash/ChangeLog,v 1.10 2003/02/12 05:12:48 vapier Exp $

*gnucash-1.6.8 (05 Sep 2002)

  06 Nov 2002: L. Boshell <leonardop@gentoo.org> : Remove the
  `--enable-profile' argument for ./configure. Fixes bug #6769.
  
  05 Nov 2002; L. Boshell <leonardop@gentoo.org> gnucash-1.6.8.ebuild :
  Fixed guile dep (bug #10306).
  
  05 Sep 2002; Chris Houser <chouser@gentoo.org> gnucash-1.6.8.ebuild :
  Bump up to latest version of gnucash.  Both 1.6.7 and this version failed to
  build for me with "postgres" in my use settings.  I added a patch to this
  version that seems to fix it.

*gnucash-1.6.7 (19 Aug 2002)
  19 Aug 2002; Spider <spider@gentoo.org> gnucash-1.6.7.ebuild :
  filter out -fomit-frame-pointer as it fails to build with this
  update to last version
  
*gnucash-1.6.6-r1 (07 Aug 2002)

  19 Aug 2002; L. Boshell <leonardop@gentoo.org> gnucash-1.6.6-r1.ebuild:
  Make sure to avoid the C flag `-fomit-frame-pointer', since it causes
  problems in the compilation phase. Thanks to Jacob Perkins and Paul Belt
  for pointing this out on bug #6193.

  07 Aug 2002; L. Boshell <leonardop@gentoo.org> gnucash-1.6.6-r1.ebuild:
  Reworked dependencies. Add support for PostgreSQL.

*gnucash-1.6.6 (28 Mar 2002)

  25 Jul 2002; Daniel Ahlberg <aliz@gentoo.org> gnucash-1.6.6.ebuild :
  Added LICENSE, KEYWORDS, SLOT.

  28 Mar 2002; Seemant Kulleen <seemant@gentoo.org> gnucash-1.6.6.ebuild :

  Version bump

*gnucash-1.6.5-r1 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you